--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -13,7 +13,7 @@
 <nav class="navbar">
     <div class="container">
         <ul class="menu">
-{#            <li><a href="{% url 'webapp:index' %}">Home</a></li>#}
+            <li><a href="{% url 'webapp:index' %}">Home</a></li>
 {#            {% block menu %}{% endblock %}#}
 {#            {% if request.user.is_authenticated %}#}
 {#                {% block menu_links %}{% endblock %}#}
