added accounts files

--- a/source/accounts/templates/user_detail.html
+++ b/source/accounts/templates/user_detail.html
@@ -2,8 +2,8 @@
 {% block title %} User {% endblock %}
 {% block menu_links %}
     {% if user_obj == request.user %}
-{#    <li><a href="{% url "accounts:update" user_obj.pk %}">Edit Profile</a></li>#}
-{#    <li><a href="{% url "accounts:change_password" user_obj.pk %}">Change password</a></li>#}
+    <li><a href="{% url "accounts:update" user_obj.pk %}">Edit Profile</a></li>
+    <li><a href="{% url "accounts:change_password" user_obj.pk %}">Change password</a></li>
     {% endif %}
 {% endblock %}
 {% block content %}
